--- a/official-ws/nodejs/influxdb/hight_frequent/bitmexDataSignal/web/src/App.css
+++ b/official-ws/nodejs/influxdb/hight_frequent/bitmexDataSignal/web/src/App.css
@@ -24,3 +24,14 @@
   clear: both;
   height: 0;
 }
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-top: 20px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.3);
+}
