--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
@@ -40,3 +40,13 @@ th, td {
 .red {
   color: #d16547;
 }
+
+@keyframes flash {
+  0% { transform: scale(0.8); }
+  50% { color: scale(1.2); }
+  100% { color: scale(0.8); }
+}
+
+.flash {
+  animation: flash 1s infinite;
+}
