--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
@@ -42,11 +42,12 @@ th, td {
 }
 
 @keyframes flash {
-  0% { transform: scale(0.8); }
-  50% { color: scale(1.2); }
-  100% { color: scale(0.8); }
+  0% { transform: scale(1); }
+  50% { transform: scale(1.6); }
+  100% { transform: scale(1); }
 }
 
 .flash {
+  display: inline-block;
   animation: flash 1s infinite;
 }
