--- a/official-ws/nodejs/strategy/backtest/report-template.mustache
+++ b/official-ws/nodejs/strategy/backtest/report-template.mustache
@@ -19,9 +19,9 @@
     <p>
       回测日期：{{date}}<br/>
       回测交易所：{{exchange}}<br/>
-      品种：{{symbol}}<br/>
-      时间级别：{{period}}<br/>
-      回测K线数：{{candleCount}}<br/>
+      品种：{{symbol}}&nbsp;
+      时间级别：{{period}}&nbsp;
+      回测K线数：{{candleCount}}&nbsp;
     </p>
     <ul>
       {{#comments}}
@@ -29,6 +29,7 @@
       {{/comments}}
     </ul>
     <h4>收益曲线</h4>
+    <p>复利收益曲线：1=初始仓位大小，2表示收益100%，依次类推;&nbsp;回撤：-1表示亏损100%，爆仓</p>
     <p>
       <img src="./result.jpg"/>
     </p>
