--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
@@ -51,3 +51,17 @@ th, td {
   display: inline-block;
   animation: flash 1s infinite;
 }
+
+.bot-row .switch {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.bot-row .options {
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
+.bot-row .options .bot-option {
+  margin-right: 10px;
+}
