--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
@@ -65,3 +65,32 @@ th, td {
 .bot-row .options .bot-option {
   margin-right: 10px;
 }
+
+.order-limit-withstop-container {
+  position: relative;
+}
+
+.order-limit-withstop-container .row {
+  margin-bottom: 5px;
+}
+
+.order-limit-withstop-container .prices-section input {
+  width: 100px;
+}
+
+.order-limit-withstop-container .prices-section label {
+  display: inline-block;
+  width: 60px;
+}
+
+.order-limit-withstop-container .pending {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-align: center;
+  font-size: 24px;
+}
