--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
@@ -94,3 +94,9 @@ th, td {
   text-align: center;
   font-size: 24px;
 }
+
+.cb:hover {
+  cursor: pointer;
+  color: #0759cb;
+  font-weight: bolder;
+}
