--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/src/views/Trade/index.css
@@ -100,3 +100,9 @@ th, td {
   color: #0759cb;
   font-weight: bolder;
 }
+
+.outstand {
+  font-size: 20px;
+  font-weight: bold;
+  color: #a5b4ff;
+}
